<resources>
    <string name="app_name">Hotel Booking App</string>
    <string name="image">Image</string>
    <string name="welcome_screen_title">Unleash Your Inner Traveller</string>
    <string name="txt_welcome_caption">Your passport to a world of extraordinary hotel experiences. Join us today and unlock a realm of comfort, luxury, and adventure.</string>
    <string name="start_exploring">Start Exploring</string>
    <string name="arrow_right">arrow_right</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="go_back">go_back</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_">Continue</string>
    <string name="or_signup_with">Or signup with</string>
    <string name="google">Google</string>
    <string name="subtitle_signup">Fill your information below or register with your social account.</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="login_subtitle">We missed you! Login to continue your journey with us.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="verify">Verify</string>
    <string name="please_enter_the_verification_code_sent_to_example_gmail_com">Please enter the verification code sent to example@gmail.com</string>
    <string name="please_enter_the_verification_code_sent_to_with_formatter">Please enter the verification code sent to %1$s</string>
    <string name="resend_again">Resend again</string>
    <string name="did_t_receive_code">Did\'t receive code?</string>

    <string name="google_web_client">414731521582-3nodtgho3jidvfv7rutbj6tn705pt01n.apps.googleusercontent.com</string>


    <string name="facebook_app_id">1401879463761270</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">e99a473a451c1b9a2467e588ef5a1c23</string>


    <string name="internet_not_working">Uh..oh… We\'re unable proceed, its seems like your internet connection is broke or maybe limited. Please check it and try again.</string>
    <string name="no_internet">No internet connection!</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    <string name="limited_internet_connection">Limited Internet Connection</string>
    <string name="auth_user_collision_message">It seems like %1$s is already linked with the following login providers. Please select any of following provider in order to login with your previous information.</string>
    <string name="user_collision">User Collision</string>
    <string name="select">Select</string>
    <string name="operation_cancelled">Operation Cancelled</string>
    <string name="operation_cancelled_content">It seems like you cancel the on-going operation. You can restart the process by simply clicking Try Again.</string>
    <string name="logout">Logout</string>

    <string name="please_enter_your_inputType">Please Enter Your %1$s!</string>
    <string name="please_enter_a_smaller_inputType">Please Enter A Smaller %1$s</string>
    <string name="please_enter_a_larger_inputType">Please Enter A Larger %1$s</string>
    <string name="please_enter_a_valid_email">Please Enter A Valid Email</string>
    <string name="invalid_input_in_sign_in">Please check your email and password</string>
    <string name="wrong_otp">Wrong OTP!</string>
    <string name="unknown_error_occurred">Unknown Error Occurred!</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="my_booking">My Booking</string>
    <string name="profie">Profie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="welcome_to_your_next_adventure">Welcome to your next Adventure!</string>
    <string name="discover_the_perfect_stay_with_wanderstay">Discover the Perfect Stay with WanderStay</string>
    <string name="where">Where?</string>
    <string name="ex_kolkata">Ex: Kolkata</string>
    <string name="check_in">Check-in</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="check_out">Check-out</string>
    <string name="guests">Guests</string>
    <string name="room">Room</string>
    <string name="_1">1</string>
    <string name="find">FIND</string>

    <string name="check_in_dialog_title">Select Check-In Date</string>
    <string name="check_out_dialog_title">Select Check-Out Date</string>
    <string name="empty_city_name">Please enter a location or city</string>
    <string name="location">Location</string>
    <string name="txt_format_date_range_example"><u>24 OCT - 26 OCT</u></string>
    <string name="txt_format_date_range"><u>%1$s</u></string>
    <string name="txt_format_guests"><u>%1$s</u></string>
    <string name="txt_format_guests_example"><u>3 guests</u></string>
    <string name="search_hotel_by_name">Search Hotel By Name</string>
    <string name="recommanded_hotels">Recommended Hotels</string>
    <string name="business_accomodates">Business Accomodates</string>
    <string name="night">/night</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort By</string>
    <string name="ratings">Ratings</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="apply">APPLY</string>
    <string name="no_offer">No Offer</string>
    <string name="favorite">Favorite</string>
    <string name="your_favorite_hotels_will_appear_here">Your favorite Hotels will appear here</string>
    <string name="booked">Booked</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="under_lined_reviews"><u>4.5 (120 Reviews)</u></string>
    <string name="underline_text_format"><u>%1$s</u></string>
    <string name="description">Description</string>
    <string name="nestled_in_the_lush_tropical_paradise_of_jimbaran_bali_ayana_resort_and_spa_offers_an_enchanting_escape_for_travelers_seeking_luxury_relaxation_and_breathtaking_ocean_views_read_more">Nestled in the lush tropical paradise of Jimbaran, Bali, AYANA Resort and Spa offers an enchanting escape for travelers seeking luxury, relaxation, and breathtaking ocean views</string>
    <string name="contact_info">Contact Info</string>
    <string name="receptionist">Receptionist</string>
    <string name="gallery">Gallery</string>
    <string name="book_now">BOOK NOW</string>
    <string name="john_mail">John Mail</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="booking_date">Booking Date</string>
    <string name="room_s">Room(s)</string>
    <string name="total">Total</string>
    <string name="continue_to_payment">CONTINUE TO PAYMENT</string>
    <string name="view_e_receipt"><u>VIEW E-RECEIPT</u></string>
    <string name="your_booked_hotels_will_appear_here">Your Booked Hotels Will Appear Here</string>
</resources>