<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:background="@color/surface_color_1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:elevation="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            app:civ_border_color="@color/divider_color_horizontal"
            app:civ_border_width="1dp"
            tools:src="@drawable/test_profile" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_name_profile" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/txt_profile_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/surface_color_caption" />

                    <TextView
                        android:id="@+id/txt_name"
                        style="@style/txt_profile_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/surface_color_caption"
                        tools:text="John Cena" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email_profile" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/txt_profile_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/surface_color_caption" />

                    <TextView
                        android:id="@+id/txt_email"
                        style="@style/txt_profile_sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/surface_color_caption"
                        tools:text="mkv83394@gmail.com" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_out"
            style="@style/button_text_roboto"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:backgroundTint="#FF5722"
            android:text="@string/logout" />

    </RelativeLayout>

</FrameLayout>